# Neural-Network-From-Scratch

./: .gitignore  CMakeLists.txt  DataProcessing.cpp  DataProcessing.h  Layer.cpp  Layer.cu  Layer.h  MyMatrix.cpp  MyMatrix.cu  MyMatrix.h  NeuralNet.cpp  NeuralNet.cu  NeuralNet.h  README.md  devshell.bat  main.cpp  main.cu  make.bat
